--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.10.5",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
